[package]
name = "kraken-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
anyhow = "1.0.94"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
bincode = "1.3.3"
csv = "1.3.1"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2"

[dev-dependencies]
diesel_cli = { version = "2.1", features = ["sqlite"] }
